compiler/testData/diagnostics/tests/callableReference/kt55373.kt
class One
fun one() = Unit
class Two

val test: Two = <!TYPE_MISMATCH!>::<!TYPE_MISMATCH!>One<!><!>
val test2: Two = <!TYPE_MISMATCH!>::<!TYPE_MISMATCH!>one<!><!>
val test3: (String) -> One = <!TYPE_MISMATCH!>::<!TYPE_MISMATCH!>One<!><!>
